# mcp-cookie-cutter

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_COMMANDS_ANALYSIS.md  COMPLETE_SAAGA_DIFF_ANALYSIS.md  DETAILED_IMPLEMENTATION_PLAN.md  FINAL_COMPLETE_ANALYSIS.md  README.md  SAAGA_COMPARISON_REPORT.md  UI_ISSUES_SUMMARY.md  WINDOWS_COMPATIBILITY_AUDIT_RESULTS.md  WINDOWS_COMPATIBILITY_HANDOFF.md  ai-best-practices-outline.md  client.py  cookiecutter.json  mcp_cookie_cutter_review.md  presenter-notes.md
.claude/: claude_commands.md
post_fix_test_mcp/: .coverage.Tims-MacBook-Pro.local.48449.XyjetVFx  .coveragerc  DEVELOPER_GUIDE.md  DEVELOPMENT.md  README.md  SETUP_PROMPT.md  pyproject.toml  test_correlation_id_integration.py
post_fix_test_mcp/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
post_fix_test_mcp/post_fix_test_mcp/: __init__.py  __main__.py  config.py  logging_config.py
post_fix_test_mcp/post_fix_test_mcp/client/: __init__.py  app.py
post_fix_test_mcp/post_fix_test_mcp/decorators/: base_logger_sink.py  exception_handler.py  sqlite_logger.py  tool_logger.py
post_fix_test_mcp/post_fix_test_mcp/log_system/: __init__.py
post_fix_test_mcp/post_fix_test_mcp/server/: __init__.py  app.py
post_fix_test_mcp/post_fix_test_mcp/tools/: example_tools.py
post_fix_test_mcp/post_fix_test_mcp/ui/: app.py
post_fix_test_mcp/tests/: README.md
post_fix_test_mcp/tests/integration/: COVERAGE_GUIDE.md  conftest.py
post_fix_test_mcp/tests/unit/: test_decorators.py
test_mcp_server/: DEVELOPMENT.md  README.md  SETUP_PROMPT.md  pyproject.toml
test_mcp_server/test_mcp_server/: __init__.py  config.py  logging_config.py
test_mcp_server/test_mcp_server/client/: app.py
test_mcp_server/test_mcp_server/log_system/: __init__.py
test_mcp_server/test_mcp_server/server/: app.py
test_mcp_server/test_mcp_server/tools/: example_tools.py
tim_mcp_server/: .coverage.Tims-MacBook-Pro.local.22225.XPtdoXpx  .coverage.Tims-MacBook-Pro.local.81452.XXwWrJix  .coveragerc  DEVELOPER_GUIDE.md  DEVELOPMENT.md  LICENSE  README.md  SETUP_PROMPT.md  pyproject.toml  test_correlation_id_integration.py
tim_mcp_server/.claude/commands/: generate-tests.md
tim_mcp_server/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
tim_mcp_server/tests/: README.md
tim_mcp_server/tests/integration/: COVERAGE_GUIDE.md  conftest.py
tim_mcp_server/tests/unit/: test_decorators.py
tim_mcp_server/tim_mcp_server/: __init__.py  __main__.py  config.py  logging_config.py
tim_mcp_server/tim_mcp_server/client/: __init__.py  app.py
tim_mcp_server/tim_mcp_server/decorators/: base_logger_sink.py  exception_handler.py  sqlite_logger.py  tool_logger.py
tim_mcp_server/tim_mcp_server/log_system/: __init__.py
tim_mcp_server/tim_mcp_server/server/: __init__.py  app.py
tim_mcp_server/tim_mcp_server/tools/: example_tools.py
tim_mcp_server/tim_mcp_server/ui/: __init__.py  app.py
{{cookiecutter.__project_slug}}/: .coveragerc  AGENTS.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  Dockerfile  README.md  SETUP_PROMPT.md  docker-compose.yml  pyproject.toml  test_correlation_id_integration.py
{{cookiecutter.__project_slug}}/.claude/commands/: add-tool.md  getting-started.md  remove-examples.md  test-planwork-structure.md
{{cookiecutter.__project_slug}}/.claude/test-data/: test-approval-flow.md  test-plan-exit.md  test-planwork-structure.md
{{cookiecutter.__project_slug}}/.reference/: mcp-beginners-guide.md  mcp-quick-reference.md  mcp-sdk-knowledge-base.md  mcp-version-tracker.md
{{cookiecutter.__project_slug}}/.reference/patterns/: decorator_patterns.py  tool_patterns.py
{{cookiecutter.__project_slug}}/docs/: CORRELATION_ID_TESTING.md  DECORATOR_PATTERNS.md  MCP_DESIGN_PRINCIPLES.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
{{cookiecutter.__project_slug}}/scripts/: docker.py
{{cookiecutter.__project_slug}}/tests/: README.md
{{cookiecutter.__project_slug}}/tests/integration/: COVERAGE_GUIDE.md  cli.py  conftest.py  test_example_tools_edge_cases.py
{{cookiecutter.__project_slug}}/tests/unit/: test_decorators.py  test_sse_removal.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/: __init__.py  __main__.py  config.py  logging_config.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/client/: __init__.py  app.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/decorators/: base_logger_sink.py  exception_handler.py  parallelize.py  sqlite_logger.py  tool_logger.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/log_system/: __init__.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/server/: __init__.py  app.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/tools/: example_tools.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/ui/: app.py
{{cookiecutter.project_slug}}/: .coveragerc  DEVELOPER_GUIDE.md  DEVELOPMENT.md  README.md  SETUP_PROMPT.md  pyproject.toml  test_correlation_id_integration.py  test_unified_logging.py
{{cookiecutter.project_slug}}/.claude/: add-tool.md
{{cookiecutter.project_slug}}/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
{{cookiecutter.project_slug}}/tests/: README.md
{{cookiecutter.project_slug}}/tests/integration/: COVERAGE_GUIDE.md  cli.py  conftest.py  test_example_tools_edge_cases.py  test_example_tools_integration.py
{{cookiecutter.project_slug}}/tests/unit/: test_decorators.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  client.py  config.py  logging_config.py  server.py  server_sse.py  server_stdio.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/client/: __init__.py  app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/decorators/: base_logger_sink.py  exception_handler.py  sqlite_logger.py  tool_logger.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/log_system/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/server/: __init__.py  app.py  sse.py
(+73 files in other folders)
