[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_mcp_server"
version = "0.1.0"
description = "Test server with auto setup"
readme = "README.md"
authors = [
    {name = "Test Author", email = "test@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.0.0",
    "anyio>=4.5",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
monitoring = ["psutil>=5.9.0"]
ui = ["streamlit>=1.29.0"]

[project.scripts]
# Single entry point for server that handles both transports
test_mcp_server-server = "test_mcp_server.server.app:main"
test_mcp_server-server-stdio = "test_mcp_server.server.app:main_stdio"
test_mcp_server-server-http = "test_mcp_server.server.app:main_http"
test_mcp_server-server-sse = "test_mcp_server.server.app:main_sse"
test_mcp_server-client = "test_mcp_server.client.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["test_mcp_server*"]
namespaces = false 