[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "mcp[cli]>=1.0.0",
    "anyio>=4.5",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
monitoring = ["psutil>=5.9.0"]
ui = ["streamlit>=1.29.0"]

[project.scripts]
# Single entry point for server that handles both transports
{{ cookiecutter.project_slug }}-server = "{{ cookiecutter.project_slug }}.server.app:main"
{{ cookiecutter.project_slug }}-server-stdio = "{{ cookiecutter.project_slug }}.server.app:main_stdio"
{{ cookiecutter.project_slug }}-server-http = "{{ cookiecutter.project_slug }}.server.app:main_http"
{{ cookiecutter.project_slug }}-server-sse = "{{ cookiecutter.project_slug }}.server.app:main_sse"
{{ cookiecutter.project_slug }}-client = "{{ cookiecutter.project_slug }}.client.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.project_slug }}*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov={{ cookiecutter.project_slug }} --cov-report=html --cov-report=term-missing" 